--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -1922,7 +1922,7 @@
             para += "&" + "ShowDelete=false";
             para += "&" + "PKey_1=ID";
             para += "&" + "PKey_1_Val=" +"111" ;
-            window.open('@Url.Action("InspMeasurement_PictureList", "PublicWondow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
+            window.open('@Url.Action("InspMeasurement_PictureList", "PublicWindow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
         });
     }
 
