--- a/Quality/Quality/Areas/StyleManagement/Views/PrintBarcode/Index.cshtml
+++ b/Quality/Quality/Areas/StyleManagement/Views/PrintBarcode/Index.cshtml
@@ -293,22 +293,22 @@
 
     function QueryButtonBind() {
         $('#btnBrandSelectItem').on('click', function () {
-             window.open('@Url.Action("BrandList", "PublicWondow",new { Area=""})', 'Brand', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+             window.open('@Url.Action("BrandList", "PublicWindow",new { Area=""})', 'Brand', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('#btnSeasonSelectItem').on('click', function () {
             var para = "?BrandID=" + $('#txtBrand').val();
-            window.open('@Url.Action("SeasonList", "PublicWondow",new { Area=""})' + para, 'Season', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("SeasonList", "PublicWindow",new { Area=""})' + para, 'Season', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('#btnStyleSelectItem').on('click', function () {
             var para = "?BrandID=" + $('#txtBrand').val() + "&SeasonID=" + $('#txtSeason').val();
-            window.open('@Url.Action("StyleList", "PublicWondow",new { Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("StyleList", "PublicWindow",new { Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $("#txtBrand").blur(function () {
             $.ajax({
-                url: "@Url.Action("BrandList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("BrandList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: $(this).val(), ReturnType: "JSON" }),
@@ -328,7 +328,7 @@
         $("#txtSeason").blur(function () {
             var BrandID = $('#txtBrand').val();
             $.ajax({
-                url: "@Url.Action("SeasonList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("SeasonList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: $(this).val(), ReturnType: "JSON" }),
@@ -349,7 +349,7 @@
             var BrandID = $('#txtBrand').val();
             var SeasonID = $('#txtSeason').val();
             $.ajax({
-                url: "@Url.Action("StyleList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("StyleList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: SeasonID, StyleID: $(this).val(), ReturnType: "JSON" }),
