--- a/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/DailyMoisture/Index.cshtml
@@ -733,17 +733,17 @@
     function QueryButtonBind() {
         $('#btnBrandSelectItem').on('click', function () {
             var para = "?TargetID=Request_BrandID";
-            window.open('@Url.Action("BrandList","PublicWondow",new{Area=""})' + para, 'Brand', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("BrandList","PublicWindow",new{Area=""})' + para, 'Brand', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('#btnSeasonSelectItem').on('click', function () {
             var para = "?TargetID=Request_SeasonID&BrandID=" + $('#Request_BrandID').val();
-            window.open('@Url.Action("SeasonList","PublicWondow",new{Area=""})' + para, 'Season', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("SeasonList","PublicWindow",new{Area=""})' + para, 'Season', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('#btnStyleSelectItem').on('click', function () {
             var para = "?TargetID=Request_StyleID&BrandID=" + $('#Request_BrandID').val() + "&SeasonID=" + $('#Request_SeasonID').val();
-            window.open('@Url.Action("StyleList","PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("StyleList","PublicWindow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         @*$('#btnArticleSelectItem').on('click', function () {
@@ -753,7 +753,7 @@
             }
 
             var para = "?TargetID=Request_Article&OrderID=&StyleUkey=0&BrandID=" + $('#Request_BrandID').val() + "&SeasonID=" + $('#Request_SeasonID').val() + "&StyleID=" + $('#Request_StyleID').val();
-            window.open('@Url.Action("ArticleList","PublicWondow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("ArticleList","PublicWindow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });*@
 
 
@@ -819,7 +819,7 @@
             }
 
             $.ajax({
-                url: "@Url.Action("BrandList","PublicWondow",new{Area=""})",
+                url: "@Url.Action("BrandList","PublicWindow",new{Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: $(this).val(), ReturnType: "JSON" }),
@@ -849,7 +849,7 @@
 
             var BrandID = $('#' + name + 'BrandID').val();
             $.ajax({
-                url: "@Url.Action("SeasonList","PublicWondow",new{Area=""})",
+                url: "@Url.Action("SeasonList","PublicWindow",new{Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: $(this).val(), ReturnType: "JSON" }),
@@ -881,7 +881,7 @@
             var BrandID = $('#' + name + 'BrandID').val();
             var SeasonID = $('#' + name + 'SeasonID').val();
             $.ajax({
-                url: "@Url.Action("StyleList","PublicWondow",new{Area=""})",
+                url: "@Url.Action("StyleList","PublicWindow",new{Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: SeasonID, StyleID: $(this).val(), ReturnType: "JSON" }),
@@ -910,7 +910,7 @@
             var StyleID = $('#' + name + 'StyleID').val();
 
             $.ajax({
-                url: "@Url.Action("ArticleList","PublicWondow",new{Area=""})",
+                url: "@Url.Action("ArticleList","PublicWindow",new{Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, StyleUkey: 0, SeasonID: SeasonID, StyleID: StyleID, Article: $(this).val(), ReturnType: "JSON" }),
@@ -1068,7 +1068,7 @@
             para += "&" + "AfterColumn=TestAfterPicture";
             para += "&" + "PKey_1=ReportNo";
             para += "&" + "PKey_1_Val=" + $('#ReportNo').val();
-            window.open('@Url.Action("PictureList", "PublicWondow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
+            window.open('@Url.Action("PictureList", "PublicWindow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
         });
 
         $('#PDF').on('click', function () {
@@ -1118,39 +1118,39 @@
     function DetailButtonBind() {
         $('#btnDetailBrandSelectItem').on('click', function () {
             var para = "?TargetID=BrandID";
-            window.open('@Url.Action("BrandList","PublicWondow",new{Area=""})' + para, 'BrandID', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("BrandList","PublicWindow",new{Area=""})' + para, 'BrandID', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('#btnDetailSeasonSelectItem').on('click', function () {
             var para = "?TargetID=SeasonID&BrandID=" + $('#BrandID').val();
-            window.open('@Url.Action("SeasonList","PublicWondow",new{Area=""})' + para, 'SeasonID', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("SeasonList","PublicWindow",new{Area=""})' + para, 'SeasonID', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('#btnDetailStyleSelectItem').on('click', function () {
             var para = "?TargetID=StyleID&BrandID=" + $('#BrandID').val() + "&SeasonID=" + $('#SeasonID').val();
-            window.open('@Url.Action("StyleList","PublicWondow",new{Area=""})' + para, 'StyleID', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("StyleList","PublicWindow",new{Area=""})' + para, 'StyleID', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         @*$('#btnDetailArticleSelectItem').on('click', function () {
             var para = "?TargetID=Article&OrderID=&StyleUkey=0&BrandID=" + $('#BrandID').val() + "&SeasonID=" + $('#SeasonID').val() + "&StyleID=" + $('#StyleID').val();
-            window.open('@Url.Action("ArticleList","PublicWondow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("ArticleList","PublicWindow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });*@
 
         $('#btnDetailSubconNameSelectItem').on('click', function () {
-            window.open('@Url.Action("LocalSuppList","PublicWondow",new{Area=""})', 'T1/SubconName', config = 'toolbar=no,status=no,location=no,width=900,height=650');
+            window.open('@Url.Action("LocalSuppList","PublicWindow",new{Area=""})', 'T1/SubconName', config = 'toolbar=no,status=no,location=no,width=900,height=650');
         });
 
         $('#btnDetailSupplierNameSelectItem').on('click', function () {
-            window.open('@Url.Action("TPESuppList","PublicWondow",new{Area=""})', 'T2/SupplierName', config = 'toolbar=no,status=no,location=no,width=800,height=650');
+            window.open('@Url.Action("TPESuppList","PublicWindow",new{Area=""})', 'T2/SupplierName', config = 'toolbar=no,status=no,location=no,width=800,height=650');
         });
 
         $('#btnDetailTechnicianSelectItem').on('click', function () {
             var para = "?CallFunction=MockupOven";
-            window.open('@Url.Action("TechnicianList", "PublicWondow",new{Area=""})' + para, 'Technician', config = 'toolbar=no,status=no,location=no,width=800,height=650');
+            window.open('@Url.Action("TechnicianList", "PublicWindow",new{Area=""})' + para, 'Technician', config = 'toolbar=no,status=no,location=no,width=800,height=650');
         });
 
         $('#btnDetailMRSelectItem').on('click', function () {
-            window.open('@Url.Action("Pass1List", "PublicWondow",new{Area=""})', 'MR', config = 'toolbar=no,status=no,location=no,width=800,height=650');
+            window.open('@Url.Action("Pass1List", "PublicWindow",new{Area=""})', 'MR', config = 'toolbar=no,status=no,location=no,width=800,height=650');
         });
 
         blurEvent("");
@@ -1172,7 +1172,7 @@
 
             var idx = $(this).attr("idv");
             var para = "?TargetID=" + idx + "__ArtworkColor&BrandID=" + brandid + "&Title=Artwork Color";
-            window.open('@Url.Action("ColorList", "PublicWondow",new{Area=""})' + para, 'Artwork Color', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("ColorList", "PublicWindow",new{Area=""})' + para, 'Artwork Color', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('.btnFabricColorItem').on('click', function () {
@@ -1184,7 +1184,7 @@
 
             var idx = $(this).attr("idv");
             var para = "?TargetID=" + idx + "__FabricColor&BrandID=" + brandid + "&Title=Fabric Color";
-            window.open('@Url.Action("ColorList", "PublicWondow",new{Area=""})' + para, 'Fabric Color', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("ColorList", "PublicWindow",new{Area=""})' + para, 'Fabric Color', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('.detailDelete').unbind('click').on('click', function () {
@@ -1205,7 +1205,7 @@
                 return;
             }
             var para = `?TargetID=${targetID}&OrderID=${OrderID}`;
-            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWindow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('.FabricRefNoTxt').unbind('blur').blur(function () {
@@ -1221,7 +1221,7 @@
                 return;
             }
             $.ajax({
-                url: "@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("Po_Supp_Detail_RefnoList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ OrderID: orderID, Refno: refno , TargetID: targetID, ReturnType: "JSON" }),
@@ -1248,7 +1248,7 @@
                 return;
             }
             var para = `?TargetID=${targetID}&OrderID=${OrderID}`;
-            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWindow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('.HTRefNoTxt').unbind('blur').blur(function () {
@@ -1264,7 +1264,7 @@
                 return;
             }
             $.ajax({
-                url: "@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("Po_Supp_Detail_RefnoList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ OrderID: orderID, Refno: refno, MtlTypeID: 'HEAT TRANS', TargetID: targetID, ReturnType: "JSON" }),
@@ -1291,7 +1291,7 @@
                 return;
             }
             var para = `?TargetID=${targetID}&OrderID=${OrderID}&MtlTypeID=HEAT TRANS`;
-            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWondow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("Po_Supp_Detail_RefnoList", "PublicWindow",new{Area=""})' + para, 'Style', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
     }
@@ -1426,7 +1426,7 @@
 
     function FailMail() {
         var para = "?Title=" + $('.page-header span').html() + "&FactoryID=@ViewBag.FactoryID&Type=BulkFGT&ExitReload=False";
-        window.open('@Url.Action("TestFailMailList", "PublicWondow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
+        window.open('@Url.Action("TestFailMailList", "PublicWindow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
     }
 
     function GetTestFailMailList(data) {
