--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
@@ -854,17 +854,17 @@
     function DetailButtonBind() {
         $('#btnDetailArticleSelectItem').on('click', function () {
             var para = "?OrderID=" + $('#Main_POID').val() + "&StyleUkey=0";
-            window.open('@Url.Action("PoidArticleList", "PublicWondow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("PoidArticleList", "PublicWindow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=400,height=650');
         });
 
         $('#btnDetailInspectorSelectItem').on('click', function () {
-            window.open('@Url.Action("Pass1List","PublicWondow",new{Area=""})', 'Inspector', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
+            window.open('@Url.Action("Pass1List","PublicWindow",new{Area=""})', 'Inspector', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
         });
 
         $('#Main_Article').blur(function () {
             var OrderID = $('#Main_POID').val();
             $.ajax({
-                url: "@Url.Action("PoidArticleList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("PoidArticleList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ OrderID: OrderID, StyleUkey: 0, Article: $(this).val(), ReturnType: "JSON" }),
@@ -883,7 +883,7 @@
 
         $('#Main_Inspector').blur(function () {
             $.ajax({
-                url: "@Url.Action("Pass1List", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("Pass1List", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ ID: $(this).val(), ReturnType: "JSON" }),
@@ -910,7 +910,7 @@
         $('.btnDetailSEQSelectItem').unbind('click').on('click', function () {
             var TargetID = $(this).attr("idv");
             var para = "?POID=" + $('#Main_POID').val() + "&FabricType=F&TargetID=" + TargetID;
-            window.open('@Url.Action("Po_Supp_DetailList", "PublicWondow",new{Area=""})' + para, '', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
+            window.open('@Url.Action("Po_Supp_DetailList", "PublicWindow",new{Area=""})' + para, '', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
         });
 
         $('.btnDetailRollSelectItem').unbind('click').on('click', function () {
@@ -922,7 +922,7 @@
 
             var seq = $("#Details_" + TargetID + "__Seq").val().split("-");
             var para = "?Title=Roll&POID=" + $('#Main_POID').val() + "&Seq1=" + seq[0] + "&Seq2=" + seq[1] + "&TargetID=" + TargetID;
-            window.open('@Url.Action("FtyInventoryList", "PublicWondow",new{Area=""})' + para, '', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
+            window.open('@Url.Action("FtyInventoryList", "PublicWindow",new{Area=""})' + para, '', config = 'toolbar=no,status=no,location=no,width=1000,height=650');
         });
 
         $('.InputDetailSEQSelectItem').unbind('blur').blur(function () {
@@ -930,7 +930,7 @@
             var POID = $('#Main_POID').val();
 
             $.ajax({
-                url: "@Url.Action("Po_Supp_DetailList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("Po_Supp_DetailList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ POID: POID, FabricType: 'F', Seq: $(this).val(), ReturnType: "JSON" }),
@@ -983,7 +983,7 @@
             var SEQ2 = seq[1];
 
             $.ajax({
-                url: "@Url.Action("FtyInventoryList", "PublicWondow",new { Area=""})",
+                url: "@Url.Action("FtyInventoryList", "PublicWindow",new { Area=""})",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ POID: POID, Seq1: SEQ1, Seq2: SEQ2, Roll: $(this).val(), ReturnType: "JSON" }),
@@ -1111,7 +1111,7 @@
             para += "&" + "PKey_3_Val=" + $('#Main_TestNo').val();
             para += "&" + "TargetBeforeColumn=Main_TestBeforePicture";
             para += "&" + "TargetAfterColumn=Main_TestAfterPicture";
-            window.open('@Url.Action("PictureList", "PublicWondow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
+            window.open('@Url.Action("PictureList", "PublicWindow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
         });
 
         $('#New').unbind('click').on('click', function () {
@@ -1435,7 +1435,7 @@
 
     function FailMail() {
         var para = "?Title=" + $('.page-header span').html() + "&FactoryID=@ViewBag.FactoryID&Type=BulkFGT";
-        window.open('@Url.Action("TestFailMailList", "PublicWondow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
+        window.open('@Url.Action("TestFailMailList", "PublicWindow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
     }
 
     function GetTestFailMailList(data) {
