--- a/Quality/Quality/Areas/BulkFGT/Views/StickerTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/StickerTest/Index.cshtml
@@ -928,7 +928,7 @@
 
         $("#Request_BrandID").blur(function () {
             $.ajax({
-                url: "@Url.Action("BrandList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("BrandList", "PublicWindow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: $(this).val(), ReturnType: "JSON" }),
@@ -948,7 +948,7 @@
         $("#Request_SeasonID").blur(function () {
             var BrandID = $('#Request_BrandID').val();
             $.ajax({
-                url: "@Url.Action("SeasonList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("SeasonList", "PublicWindow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: $(this).val(), ReturnType: "JSON" }),
@@ -969,7 +969,7 @@
             var BrandID = $('#Request_BrandID').val();
             var SeasonID = $('#Request_SeasonID').val();
             $.ajax({
-                url: "@Url.Action("StyleList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("StyleList", "PublicWindow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: SeasonID, StyleID: $(this).val(), ReturnType: "JSON" }),
@@ -991,7 +991,7 @@
             var SeasonID = $('#Request_SeasonID').val();
             var StyleID = $('#Request_StyleID').val();
             $.ajax({
-                url: "@Url.Action("ArticleList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("ArticleList", "PublicWindow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: SeasonID, StyleID: StyleID, Article: $(this).val(), ReturnType: "JSON" }),
@@ -1011,7 +1011,7 @@
 
     function OpenWindow(WindowType) {
         if (WindowType == "BrandID") {
-            window.open('@Url.Action("BrandList", "PublicWondow", new { Area = "" })', WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("BrandList", "PublicWindow", new { Area = "" })', WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
         }
         if (WindowType == "SeasonID") {
 
@@ -1020,7 +1020,7 @@
                 return;
             }
             var para = "?BrandID=" + $('#Request_BrandID').val();
-            window.open('@Url.Action("SeasonList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("SeasonList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
         }
         if (WindowType == "StyleID") {
 
@@ -1029,7 +1029,7 @@
                 return;
             }
             var para = "?BrandID=" + $('#Request_BrandID').val() + "&SeasonID=" + $('#Request_SeasonID').val();
-            window.open('@Url.Action("StyleList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("StyleList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
         }
         if (WindowType == "Article") {
 
@@ -1038,7 +1038,7 @@
                 return;
             }
             var para = "?TargetID=Request_Article&OrderID=&StyleUkey=0&BrandID=" + $('#Request_BrandID').val() + "&SeasonID=" + $('#Request_SeasonID').val() + "&StyleID=" + $('#Request_StyleID').val();
-            window.open('@Url.Action("ArticleList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("ArticleList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
         }
         if (WindowType == "FabricRefNo" && EditMode) {
 
@@ -1047,7 +1047,7 @@
                 return;
             }
             var para = "?TargetID=Main_FabricRefNo&OrderID=" + $('#Main_OrderID').val();
-            window.open('@Url.Action("FabricRefNoList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=750');
+            window.open('@Url.Action("FabricRefNoList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=750');
         }
         if (WindowType == "AccRefNo" && EditMode) {
 
@@ -1056,7 +1056,7 @@
                 return;
             }
             var para = "?TargetID=Main_AccRefNo&OrderID=" + $('#Main_OrderID').val();
-            window.open('@Url.Action("AccRefNoList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=750');
+            window.open('@Url.Action("AccRefNoList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=750');
         }
         if (WindowType == "InkType" && EditMode) {
 
@@ -1069,7 +1069,7 @@
                 return;
             }
             var para = `?TargetID=Main_TypeOfPrint&BrandID=${$('#Main_BrandID').val()}&SeasonID=${$('#Main_SeasonID').val()}&StyleID=${$('#Main_StyleID').val()}`;
-            window.open('@Url.Action("InkTypeList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=750');
+            window.open('@Url.Action("InkTypeList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=750');
         }
     }
 
@@ -1213,7 +1213,7 @@
             para += "&" + "AfterColumn=TestAfterPicture";
             para += "&" + "PKey_1=ReportNo";
             para += "&" + "PKey_1_Val=" + $('#Main_ReportNo').val();
-            window.open('@Url.Action("PictureList", "PublicWondow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
+            window.open('@Url.Action("PictureList", "PublicWindow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
         });
 
         $('#SendtoMR').on('click', function () {
