--- a/Quality/Quality/Areas/BulkFGT/Views/WickingHeightTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/WickingHeightTest/Index.cshtml
@@ -717,7 +717,7 @@
 
         $("#Request_BrandID").blur(function () {
             $.ajax({
-                url: "@Url.Action("BrandList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("BrandList", "PublicWindow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: $(this).val(), ReturnType: "JSON" }),
@@ -737,7 +737,7 @@
         $("#Request_SeasonID").blur(function () {
             var BrandID = $('#Request_BrandID').val();
             $.ajax({
-                url: "@Url.Action("SeasonList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("SeasonList", "PublicWindow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: $(this).val(), ReturnType: "JSON" }),
@@ -758,7 +758,7 @@
             var BrandID = $('#Request_BrandID').val();
             var SeasonID = $('#Request_SeasonID').val();
             $.ajax({
-                url: "@Url.Action("StyleList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("StyleList", "PublicWindow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: SeasonID, StyleID: $(this).val(), ReturnType: "JSON" }),
@@ -780,7 +780,7 @@
             var SeasonID = $('#Request_SeasonID').val();
             var StyleID = $('#Request_StyleID').val();
             $.ajax({
-                url: "@Url.Action("ArticleList", "PublicWondow", new { Area = "" })",
+                url: "@Url.Action("ArticleList", "PublicWindow", new { Area = "" })",
                 type: 'POST',
                 contentType: "application/json; charset=utf-8",
                 data: JSON.stringify({ BrandID: BrandID, SeasonID: SeasonID, StyleID: StyleID, Article: $(this).val(), ReturnType: "JSON" }),
@@ -800,7 +800,7 @@
 
     function OpenWindow(WindowType) {
         if (WindowType == "BrandID") {
-            window.open('@Url.Action("BrandList", "PublicWondow", new { Area = "" })', WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("BrandList", "PublicWindow", new { Area = "" })', WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
         }
         if (WindowType == "SeasonID") {
 
@@ -809,7 +809,7 @@
                 return;
             }
             var para = "?BrandID=" + $('#Request_BrandID').val();
-            window.open('@Url.Action("SeasonList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("SeasonList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
         }
         if (WindowType == "StyleID") {
 
@@ -818,7 +818,7 @@
                 return;
             }
             var para = "?BrandID=" + $('#Request_BrandID').val() + "&SeasonID=" + $('#Request_SeasonID').val();
-            window.open('@Url.Action("StyleList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("StyleList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
         }
         if (WindowType == "Article") {
 
@@ -827,7 +827,7 @@
                 return;
             }
             var para = "?TargetID=Request_Article&OrderID=&StyleUkey=0&BrandID=" + $('#Request_BrandID').val() + "&SeasonID=" + $('#Request_SeasonID').val() + "&StyleID=" + $('#Request_StyleID').val();
-            window.open('@Url.Action("ArticleList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
+            window.open('@Url.Action("ArticleList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=400,height=650');
         }
         if (WindowType == "FabricRefNo" && EditMode) {
 
@@ -836,7 +836,7 @@
                 return;
             }
             var para = "?TargetID=Main_FabricRefNo&OrderID=" + $('#Main_OrderID').val();
-            window.open('@Url.Action("FabricRefNoList", "PublicWondow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=750');
+            window.open('@Url.Action("FabricRefNoList", "PublicWindow", new { Area = "" })' + para, WindowType, config = 'toolbar=no,status=no,location=no,width=800,height=750');
         }
     }
 
@@ -932,7 +932,7 @@
             para += "&" + "TargetAfterHeader=WEFT";
             para += "&" + "PKey_1=ReportNo";
             para += "&" + "PKey_1_Val=" + $('#Main_ReportNo').val();
-            window.open('@Url.Action("PictureList", "PublicWondow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
+            window.open('@Url.Action("PictureList", "PublicWindow",new { Area=""})' + para, 'Picture List', config = 'toolbar=no,status=no,location=no,width=1024,height=750');
         });
 
         $('#SendtoMR').on('click', function () {
