--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/SendMailer.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/SendMailer.cshtml
@@ -121,7 +121,7 @@
     function FailMail() {
         var para = "?Title=Group&Type=BulkFGT&ExitReload=False";
 
-        window.open('@Url.Action("TestFailMailList", "PublicWondow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
+        window.open('@Url.Action("TestFailMailList", "PublicWindow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
     }
 
     function GetTestFailMailList(data) {
